Feature: updated config file
updated Title, Author, Description, Base URL

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # _config.yml
 
 # required, replace with your own information -----
-title: Hello for Github Pages
-author: Sara Gong
+title: MARIO SUAREZ
+author: Mario Suarez
 description: > 
-  A minimalist template for designing a personal GitHub Pages website - without typing a single line of code.
-baseurl: ""
+  About Me & My Work
+baseurl: "mariolsuarez.github.io/hello"
 
 plugins:
   - jekyll-feed
